Add Emby binding in final end-state
Signed-off-by: Zachary Christiansen <volfan6415@gmail.com>