@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.bluetooth.enoceanble.internal;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -46,13 +45,13 @@ public class EnoceanBleDiscoveryParticipant implements BluetoothDiscoveryPartici
 
     @Override
     public Set<ThingTypeUID> getSupportedThingTypeUIDs() {
-        return Collections.singleton(EnoceanBleBindingConstants.THING_TYPE_PTM215B);
+        return Set.of(EnoceanBleBindingConstants.THING_TYPE_PTM215B);
     }
 
     @Override
     public @Nullable ThingUID getThingUID(BluetoothDiscoveryDevice device) {
         Integer manufacturerId = device.getManufacturerId();
-        logger.warn("Discovered device {} with manufacturerId {} and name {}", device.getAddress(), manufacturerId,
+        logger.debug("Discovered device {} with manufacturerId {} and name {}", device.getAddress(), manufacturerId,
                 device.getName());
         if (manufacturerId != null && manufacturerId == ENOCEAN_COMPANY_ID) {
             return new ThingUID(EnoceanBleBindingConstants.THING_TYPE_PTM215B, device.getAdapter().getUID(),
