@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,9 +18,8 @@ import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.*;
+import java.util.stream.Collectors;
 
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.bsblan.internal.api.BsbLanApiCaller;
@@ -78,21 +77,18 @@ public class BsbLanBridgeHandler extends BaseBridgeHandler {
         bridgeConfig = getConfigAs(BsbLanBridgeConfiguration.class);
 
         // validate 'host' configuration
-        if (StringUtils.isBlank(bridgeConfig.host)) {
+        String host = bridgeConfig.host;
+        if (host.isBlank()) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "Parameter 'host' is mandatory and must be configured");
             return;
         }
 
         // validate 'refreshInterval' configuration
-        if (bridgeConfig.refreshInterval != null && bridgeConfig.refreshInterval < MIN_REFRESH_INTERVAL) {
+        if (bridgeConfig.refreshInterval < MIN_REFRESH_INTERVAL) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     String.format("Parameter 'refreshInterval' must be at least %d seconds", MIN_REFRESH_INTERVAL));
             return;
-        }
-
-        if (bridgeConfig.port == null) {
-            bridgeConfig.port = DEFAULT_API_PORT;
         }
 
         // all checks succeeded, start refreshing
@@ -128,8 +124,10 @@ public class BsbLanBridgeHandler extends BaseBridgeHandler {
         BsbLanApiCaller apiCaller = new BsbLanApiCaller(bridgeConfig);
 
         // refresh all parameters
-        Set<Integer> parameterIds = things.stream().filter(thing -> thing instanceof BsbLanParameterHandler)
-                .map(thing -> (BsbLanParameterHandler) thing).map(thing -> thing.getParameterId())
+        Set<Integer> parameterIds = things.stream() //
+                .filter(thing -> thing instanceof BsbLanParameterHandler) //
+                .map(thing -> (BsbLanParameterHandler) thing) //
+                .map(thing -> thing.getParameterId()) //
                 .collect(Collectors.toSet());
 
         cachedParameterQueryResponse = apiCaller.queryParameters(parameterIds);
@@ -158,9 +156,7 @@ public class BsbLanBridgeHandler extends BaseBridgeHandler {
         // use a local variable to avoid the build warning "Potential null pointer access"
         ScheduledFuture<?> localRefreshJob = refreshJob;
         if (localRefreshJob == null || localRefreshJob.isCancelled()) {
-            int interval = (config.refreshInterval != null) ? config.refreshInterval.intValue()
-                    : DEFAULT_REFRESH_INTERVAL;
-            refreshJob = scheduler.scheduleWithFixedDelay(this::doRefresh, 0, interval, TimeUnit.SECONDS);
+            refreshJob = scheduler.scheduleWithFixedDelay(this::doRefresh, 0, config.refreshInterval, TimeUnit.SECONDS);
         }
     }
 }
