@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,22 +14,23 @@ package org.openhab.binding.enocean.internal.handler;
 
 import static org.openhab.binding.enocean.internal.EnOceanBindingConstants.*;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.enocean.internal.config.EnOceanActuatorConfig;
 import org.openhab.binding.enocean.internal.eep.EEP;
 import org.openhab.binding.enocean.internal.eep.EEPFactory;
 import org.openhab.binding.enocean.internal.eep.EEPType;
 import org.openhab.binding.enocean.internal.messages.BasePacket;
 import org.openhab.core.config.core.Configuration;
+import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.thing.Channel;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.Thing;
@@ -47,18 +48,21 @@ import org.openhab.core.util.HexUtils;
  *         This class defines base functionality for sending eep messages. This class extends EnOceanBaseSensorHandler
  *         class as most actuator things send status or response messages, too.
  */
+@NonNullByDefault
 public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
     // List of thing types which support sending of eep messages
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = new HashSet<>(Arrays.asList(THING_TYPE_CENTRALCOMMAND,
-            THING_TYPE_MEASUREMENTSWITCH, THING_TYPE_GENERICTHING, THING_TYPE_ROLLERSHUTTER, THING_TYPE_THERMOSTAT));
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_CENTRALCOMMAND,
+            THING_TYPE_MEASUREMENTSWITCH, THING_TYPE_GENERICTHING, THING_TYPE_ROLLERSHUTTER, THING_TYPE_THERMOSTAT,
+            THING_TYPE_HEATRECOVERYVENTILATION);
 
-    protected byte[] senderId; // base id of bridge + senderIdOffset, used for sending msg
-    protected byte[] destinationId; // in case of broadcast FFFFFFFF otherwise the enocean id of the device
+    protected byte[] senderId = new byte[0]; // base id of bridge + senderIdOffset, used for sending msg
+    protected byte[] destinationId = new byte[0]; // in case of broadcast FFFFFFFF otherwise the enocean id of the
+                                                  // device
 
-    protected EEPType sendingEEPType = null;
+    protected @Nullable EEPType sendingEEPType = null;
 
-    private ScheduledFuture<?> refreshJob; // used for polling current status of thing
+    private @Nullable ScheduledFuture<?> refreshJob; // used for polling current status of thing
 
     public EnOceanBaseActuatorHandler(Thing thing, ItemChannelLinkRegistry itemChannelLinkRegistry) {
         super(thing, itemChannelLinkRegistry);
@@ -69,8 +73,8 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
      * @param senderIdOffset to be validated
      * @return true if senderIdOffset is between ]0;128[ and is not used yet
      */
-    private boolean validateSenderIdOffset(int senderIdOffset) {
-        if (senderIdOffset == -1) {
+    private boolean validateSenderIdOffset(@Nullable Integer senderIdOffset) {
+        if (senderIdOffset == null) {
             return true;
         }
 
@@ -94,12 +98,16 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
     }
 
     @Override
+    @Nullable
     Collection<EEPType> getEEPTypes() {
         Collection<EEPType> r = super.getEEPTypes();
+
         if (sendingEEPType == null) {
             return r;
         }
-
+        if (r == null) {
+            r = Collections.emptyList();
+        }
         return Collections.unmodifiableCollection(Stream
                 .concat(r.stream(), Collections.singletonList(sendingEEPType).stream()).collect(Collectors.toList()));
     }
@@ -107,18 +115,16 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
     @Override
     boolean validateConfig() {
         EnOceanActuatorConfig config = getConfiguration();
-        if (config == null) {
-            configurationErrorDescription = "Configuration is not valid";
-            return false;
-        }
 
-        if (config.sendingEEPId == null || config.sendingEEPId.isEmpty()) {
+        if (config.sendingEEPId.isEmpty()) {
             configurationErrorDescription = "Sending EEP must be provided";
             return false;
         }
 
+        EEPType localEEPType = null;
         try {
-            sendingEEPType = EEPType.getType(getConfiguration().sendingEEPId);
+            localEEPType = EEPType.getType(getConfiguration().sendingEEPId);
+            sendingEEPType = localEEPType;
         } catch (IllegalArgumentException e) {
             configurationErrorDescription = "Sending EEP is not supported";
             return false;
@@ -126,7 +132,7 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
         if (super.validateConfig()) {
             try {
-                if (sendingEEPType.getSupportsRefresh()) {
+                if (localEEPType.getSupportsRefresh()) {
                     if (getConfiguration().pollingInterval > 0) {
                         refreshJob = scheduler.scheduleWithFixedDelay(() -> {
                             try {
@@ -158,40 +164,38 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
     }
 
     private boolean initializeIdForSending() {
-        // Generic things are treated as actuator things, however to support also generic sensors one can define a
-        // senderIdOffset of -1
-        // TODO: seperate generic actuators from generic sensors?
-        String thingTypeId = this.getThing().getThingTypeUID().getId();
-        String genericThingTypeId = THING_TYPE_GENERICTHING.getId();
-
-        if (getConfiguration().senderIdOffset == -1 && thingTypeId.equals(genericThingTypeId)) {
-            return true;
-        }
-
         EnOceanBridgeHandler bridgeHandler = getBridgeHandler();
         if (bridgeHandler == null) {
             return false;
         }
 
-        // if senderIdOffset is not set (=> defaults to -1) or set to -1, the next free senderIdOffset is determined
-        if (getConfiguration().senderIdOffset == -1) {
+        // Generic things are treated as actuator things, however to support also generic sensors one can omit
+        // senderIdOffset
+        // TODO: seperate generic actuators from generic sensors?
+        Integer senderOffset = getConfiguration().senderIdOffset;
+
+        if ((senderOffset == null && THING_TYPE_GENERICTHING.equals(this.getThing().getThingTypeUID()))) {
+            return true;
+        }
+
+        // if senderIdOffset is not set, the next free senderIdOffset is determined
+        if (senderOffset == null) {
             Configuration updateConfig = editConfiguration();
-            getConfiguration().senderIdOffset = bridgeHandler.getNextSenderId(thing);
-            if (getConfiguration().senderIdOffset == -1) {
+            senderOffset = bridgeHandler.getNextSenderId(thing);
+            getConfiguration().senderIdOffset = senderOffset;
+            if (senderOffset == null) {
                 configurationErrorDescription = "Could not get a free sender Id from Bridge";
                 return false;
             }
-            updateConfig.put(PARAMETER_SENDERIDOFFSET, getConfiguration().senderIdOffset);
+            updateConfig.put(PARAMETER_SENDERIDOFFSET, senderOffset);
             updateConfiguration(updateConfig);
         }
 
         byte[] baseId = bridgeHandler.getBaseId();
-        baseId[3] = (byte) ((baseId[3] & 0xFF) + getConfiguration().senderIdOffset);
+        baseId[3] = (byte) ((baseId[3] + senderOffset) & 0xFF);
         this.senderId = baseId;
-
-        this.updateProperty(PROPERTY_ENOCEAN_ID, HexUtils.bytesToHex(this.senderId));
-        bridgeHandler.addSender(getConfiguration().senderIdOffset, thing);
-
+        this.updateProperty(PROPERTY_SENDINGENOCEAN_ID, HexUtils.bytesToHex(this.senderId));
+        bridgeHandler.addSender(senderOffset, thing);
         return true;
     }
 
@@ -205,9 +209,38 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
     }
 
     @Override
+    protected void sendRequestResponse() {
+        sendMessage(VIRTUALCHANNEL_SEND_COMMAND, VIRTUALCHANNEL_SEND_COMMAND, OnOffType.ON, null);
+    }
+
+    protected void sendMessage(String channelId, String channelTypeId, Command command,
+            @Nullable Configuration channelConfig) {
+        EEPType sendType = sendingEEPType;
+        if (sendType == null) {
+            logger.warn("cannot send a message with an empty EEPType");
+            return;
+        }
+        EEP eep = EEPFactory.createEEP(sendType);
+        if (eep.convertFromCommand(channelId, channelTypeId, command, id -> getCurrentState(id), channelConfig)
+                .hasData()) {
+            BasePacket msg = eep.setSenderId(senderId).setDestinationId(destinationId)
+                    .setSuppressRepeating(getConfiguration().suppressRepeating).getERP1Message();
+            if (msg == null) {
+                logger.warn("cannot send an empty message");
+                return;
+            }
+            EnOceanBridgeHandler handler = getBridgeHandler();
+            if (handler != null) {
+                handler.sendMessage(msg, null);
+            }
+        }
+    }
+
+    @Override
     public void handleCommand(ChannelUID channelUID, Command command) {
         // We must have a valid sendingEEPType and sender id to send commands
-        if (sendingEEPType == null || senderId == null) {
+        EEPType localsendingType = sendingEEPType;
+        if (localsendingType == null) {
             return;
         }
 
@@ -223,7 +256,7 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
         // check if we do support refreshs
         if (command == RefreshType.REFRESH) {
-            if (!sendingEEPType.getSupportsRefresh()) {
+            if (!localsendingType.getSupportsRefresh()) {
                 return;
             }
 
@@ -238,16 +271,7 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
         try {
             Configuration channelConfig = channel.getConfiguration();
-
-            EEP eep = EEPFactory.createEEP(sendingEEPType);
-            if (eep.convertFromCommand(channelId, channelTypeId, command, id -> getCurrentState(id), channelConfig)
-                    .hasData()) {
-                BasePacket msg = eep.setSenderId(senderId).setDestinationId(destinationId)
-                        .setSuppressRepeating(getConfiguration().suppressRepeating).getERP1Message();
-
-                getBridgeHandler().sendMessage(msg, null);
-            }
-
+            sendMessage(channelId, channelTypeId, command, channelConfig);
         } catch (IllegalArgumentException e) {
             logger.warn("Exception while sending telegram!", e);
         }
@@ -255,10 +279,15 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
     @Override
     public void handleRemoval() {
-        if (getConfiguration().senderIdOffset > 0) {
-            EnOceanBridgeHandler bridgeHandler = getBridgeHandler();
-            if (bridgeHandler != null) {
-                bridgeHandler.removeSender(getConfiguration().senderIdOffset);
+        EnOceanBridgeHandler bridgeHandler = getBridgeHandler();
+        if (bridgeHandler != null) {
+            Integer senderOffset = getConfiguration().senderIdOffset;
+            if (senderOffset != null && senderOffset > 0) {
+                bridgeHandler.removeSender(senderOffset);
+            }
+
+            if (bridgeHandler.isSmackClient(this.thing)) {
+                logger.warn("Removing smack client (ThingId: {}) without teach out!", this.thing.getUID().getId());
             }
         }
 
@@ -267,9 +296,10 @@ public class EnOceanBaseActuatorHandler extends EnOceanBaseSensorHandler {
 
     @Override
     public void dispose() {
-        if (refreshJob != null && !refreshJob.isCancelled()) {
+        ScheduledFuture<?> refreshJob = this.refreshJob;
+        if (refreshJob != null) {
             refreshJob.cancel(true);
-            refreshJob = null;
+            this.refreshJob = null;
         }
     }
 }
