@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,32 +15,37 @@ package org.openhab.binding.enocean.internal.handler;
 import static org.openhab.binding.enocean.internal.EnOceanBindingConstants.*;
 
 import java.io.IOException;
-import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.enocean.internal.EnOceanConfigStatusMessage;
 import org.openhab.binding.enocean.internal.config.EnOceanBaseConfig;
 import org.openhab.binding.enocean.internal.config.EnOceanBridgeConfig;
+import org.openhab.binding.enocean.internal.config.EnOceanBridgeConfig.ESPVersion;
 import org.openhab.binding.enocean.internal.messages.BasePacket;
-import org.openhab.binding.enocean.internal.messages.BaseResponse;
 import org.openhab.binding.enocean.internal.messages.ESP3PacketFactory;
-import org.openhab.binding.enocean.internal.messages.RDBaseIdResponse;
-import org.openhab.binding.enocean.internal.messages.RDRepeaterResponse;
-import org.openhab.binding.enocean.internal.messages.RDVersionResponse;
 import org.openhab.binding.enocean.internal.messages.Response;
 import org.openhab.binding.enocean.internal.messages.Response.ResponseType;
+import org.openhab.binding.enocean.internal.messages.responses.BaseResponse;
+import org.openhab.binding.enocean.internal.messages.responses.RDBaseIdResponse;
+import org.openhab.binding.enocean.internal.messages.responses.RDLearnedClientsResponse;
+import org.openhab.binding.enocean.internal.messages.responses.RDLearnedClientsResponse.LearnedClient;
+import org.openhab.binding.enocean.internal.messages.responses.RDRepeaterResponse;
+import org.openhab.binding.enocean.internal.messages.responses.RDVersionResponse;
 import org.openhab.binding.enocean.internal.transceiver.EnOceanESP2Transceiver;
 import org.openhab.binding.enocean.internal.transceiver.EnOceanESP3Transceiver;
 import org.openhab.binding.enocean.internal.transceiver.EnOceanTransceiver;
 import org.openhab.binding.enocean.internal.transceiver.PacketListener;
 import org.openhab.binding.enocean.internal.transceiver.ResponseListener;
 import org.openhab.binding.enocean.internal.transceiver.ResponseListenerIgnoringTimeouts;
+import org.openhab.binding.enocean.internal.transceiver.TeachInListener;
 import org.openhab.binding.enocean.internal.transceiver.TransceiverErrorListener;
 import org.openhab.core.config.core.Configuration;
 import org.openhab.core.config.core.status.ConfigStatusMessage;
@@ -61,25 +66,29 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * The {@link EnOceanBridgeHandler} is responsible for sending ESP3Packages build by {@link EnOceanActuatorHandler} and
- * transferring received ESP3Packages to {@link EnOceanSensorHandler}.
+ * The {@link EnOceanBridgeHandler} is responsible for sending ESP3Packages build by {@link EnOceanBaseActuatorHandler}
+ * and transferring received ESP3Packages to {@link EnOceanBaseSensorHandler}.
  *
  * @author Daniel Weber - Initial contribution
  */
+@NonNullByDefault
 public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements TransceiverErrorListener {
 
     private Logger logger = LoggerFactory.getLogger(EnOceanBridgeHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = new HashSet<>(Arrays.asList(THING_TYPE_BRIDGE));
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_BRIDGE);
 
-    private EnOceanTransceiver transceiver; // holds connection to serial/tcp port and sends/receives messages
-    private ScheduledFuture<?> connectorTask; // is used for reconnection if something goes wrong
+    private @Nullable EnOceanTransceiver transceiver; // holds connection to serial/tcp port and sends/receives messages
+    private @Nullable ScheduledFuture<?> connectorTask; // is used for reconnection if something goes wrong
 
-    private byte[] baseId = null;
+    private byte[] baseId = new byte[0];
     private Thing[] sendingThings = new Thing[128];
 
-    private int nextSenderId = 0;
     private SerialPortManager serialPortManager;
+
+    private boolean smackAvailable = false;
+    private boolean sendTeachOuts = true;
+    private Set<String> smackClients = Set.of();
 
     public EnOceanBridgeHandler(Bridge bridge, SerialPortManager serialPortManager) {
         super(bridge);
@@ -107,13 +116,13 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                                     }
                                 }
                             });
-                } else if (command instanceof StringType) {
-                    sendMessage(ESP3PacketFactory.CO_WR_REPEATER((StringType) command),
+                } else if (command instanceof StringType stringCommand) {
+                    sendMessage(ESP3PacketFactory.CO_WR_REPEATER(stringCommand),
                             new ResponseListenerIgnoringTimeouts<BaseResponse>() {
                                 @Override
                                 public void responseReceived(BaseResponse response) {
                                     if (response.isOK()) {
-                                        updateState(channelUID, (StringType) command);
+                                        updateState(channelUID, stringCommand);
                                     }
                                 }
                             });
@@ -121,9 +130,9 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                 break;
 
             case CHANNEL_SETBASEID:
-                if (command instanceof StringType) {
+                if (command instanceof StringType stringCommand) {
                     try {
-                        byte[] id = HexUtils.hexToBytes(((StringType) command).toFullString());
+                        byte[] id = HexUtils.hexToBytes(stringCommand.toFullString());
 
                         sendMessage(ESP3PacketFactory.CO_WR_IDBASE(id),
                                 new ResponseListenerIgnoringTimeouts<BaseResponse>() {
@@ -155,56 +164,55 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
     @Override
     public void initialize() {
         updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_PENDING, "trying to connect to gateway...");
-        if (this.serialPortManager == null) {
-            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
-                    "SerialPortManager could not be found");
-        } else {
-            Object devId = getConfig().get(NEXTSENDERID);
-            if (devId != null) {
-                nextSenderId = ((BigDecimal) devId).intValue();
-            } else {
-                nextSenderId = 0;
-            }
 
-            if (connectorTask == null || connectorTask.isDone()) {
-                connectorTask = scheduler.scheduleWithFixedDelay(new Runnable() {
-                    @Override
-                    public void run() {
-                        if (thing.getStatus() != ThingStatus.ONLINE) {
-                            initTransceiver();
-                        }
-                    }
-                }, 0, 60, TimeUnit.SECONDS);
+        connectorTask = scheduler.scheduleWithFixedDelay(new Runnable() {
+            @Override
+            public void run() {
+                if (thing.getStatus() != ThingStatus.ONLINE) {
+                    initTransceiver();
+                }
             }
-        }
+        }, 0, 60, TimeUnit.SECONDS);
     }
 
     private synchronized void initTransceiver() {
         try {
             EnOceanBridgeConfig c = getThing().getConfiguration().as(EnOceanBridgeConfig.class);
-            if (transceiver != null) {
-                transceiver.ShutDown();
+            EnOceanTransceiver localTransceiver = transceiver;
+            if (localTransceiver != null) {
+                localTransceiver.shutDown();
             }
 
             switch (c.getESPVersion()) {
                 case ESP2:
                     transceiver = new EnOceanESP2Transceiver(c.path, this, scheduler, serialPortManager);
+                    smackAvailable = false;
+                    sendTeachOuts = false;
                     break;
                 case ESP3:
                     transceiver = new EnOceanESP3Transceiver(c.path, this, scheduler, serialPortManager);
+                    sendTeachOuts = c.sendTeachOuts;
                     break;
                 default:
                     break;
             }
 
+            localTransceiver = transceiver;
+            if (localTransceiver == null) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
+                        "Failed to initialize EnOceanTransceiver");
+                return;
+            }
+
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_PENDING, "opening serial port...");
-            transceiver.Initialize();
+            localTransceiver.initialize();
 
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_PENDING, "starting rx thread...");
-            transceiver.StartReceiving(scheduler);
+            localTransceiver.startReceiving(scheduler);
+            logger.info("EnOceanSerialTransceiver RX thread up and running");
 
             if (c.rs485) {
-                if (c.rs485BaseId != null && !c.rs485BaseId.isEmpty()) {
+                if (!c.rs485BaseId.isEmpty()) {
                     baseId = HexUtils.hexToBytes(c.rs485BaseId);
                     if (baseId.length != 4) {
                         updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
@@ -221,18 +229,21 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                         "trying to get bridge base id...");
 
                 logger.debug("request base id");
-                transceiver.sendBasePacket(ESP3PacketFactory.CO_RD_IDBASE,
+                localTransceiver.sendBasePacket(ESP3PacketFactory.CO_RD_IDBASE,
                         new ResponseListenerIgnoringTimeouts<RDBaseIdResponse>() {
+
                             @Override
                             public void responseReceived(RDBaseIdResponse response) {
                                 logger.debug("received response for base id");
                                 if (response.isValid() && response.isOK()) {
                                     baseId = response.getBaseId().clone();
                                     updateProperty(PROPERTY_BASE_ID, HexUtils.bytesToHex(response.getBaseId()));
-                                    updateProperty(PROPERTY_REMAINING_WRITE_CYCLES_Base_ID,
+                                    updateProperty(PROPERTY_REMAINING_WRITE_CYCLES_BASE_ID,
                                             Integer.toString(response.getRemainingWriteCycles()));
-                                    transceiver.setFilteredDeviceId(baseId);
-
+                                    EnOceanTransceiver localTransceiver = transceiver;
+                                    if (localTransceiver != null) {
+                                        localTransceiver.setFilteredDeviceId(baseId);
+                                    }
                                     updateStatus(ThingStatus.ONLINE);
                                 } else {
                                     updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
@@ -240,11 +251,33 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                                 }
                             }
                         });
+
+                if (c.getESPVersion() == ESPVersion.ESP3) {
+                    logger.debug("set postmaster mailboxes");
+                    localTransceiver.sendBasePacket(ESP3PacketFactory.SA_WR_POSTMASTER((byte) (c.enableSmack ? 20 : 0)),
+                            new ResponseListenerIgnoringTimeouts<BaseResponse>() {
+
+                                @Override
+                                public void responseReceived(BaseResponse response) {
+                                    logger.debug("received response for postmaster mailboxes");
+                                    if (response.isOK()) {
+                                        updateProperty("Postmaster mailboxes:",
+                                                Integer.toString(c.enableSmack ? 20 : 0));
+                                        smackAvailable = c.enableSmack;
+                                        refreshProperties();
+                                    } else {
+                                        updateProperty("Postmaster mailboxes:", "Not supported");
+                                        smackAvailable = false;
+                                    }
+                                }
+                            });
+                }
             }
 
             logger.debug("request version info");
-            transceiver.sendBasePacket(ESP3PacketFactory.CO_RD_VERSION,
+            localTransceiver.sendBasePacket(ESP3PacketFactory.CO_RD_VERSION,
                     new ResponseListenerIgnoringTimeouts<RDVersionResponse>() {
+
                         @Override
                         public void responseReceived(RDVersionResponse response) {
                             if (response.isValid() && response.isOK()) {
@@ -267,14 +300,16 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
 
     @Override
     public synchronized void dispose() {
+        EnOceanTransceiver transceiver = this.transceiver;
         if (transceiver != null) {
-            transceiver.ShutDown();
-            transceiver = null;
+            transceiver.shutDown();
+            this.transceiver = null;
         }
 
-        if (connectorTask != null && !connectorTask.isDone()) {
+        ScheduledFuture<?> connectorTask = this.connectorTask;
+        if (connectorTask != null) {
             connectorTask.cancel(true);
-            connectorTask = null;
+            this.connectorTask = null;
         }
 
         super.dispose();
@@ -285,11 +320,14 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
         Collection<ConfigStatusMessage> configStatusMessages = new LinkedList<>();
 
         // The serial port must be provided
-        String path = (String) getThing().getConfiguration().get(PATH);
-        if (path == null || path.isEmpty()) {
-            configStatusMessages.add(ConfigStatusMessage.Builder.error(PATH)
+        String path = getThing().getConfiguration().as(EnOceanBridgeConfig.class).path;
+        if (path.isEmpty()) {
+            ConfigStatusMessage statusMessage = ConfigStatusMessage.Builder.error(PATH)
                     .withMessageKeySuffix(EnOceanConfigStatusMessage.PORT_MISSING.getMessageKey()).withArguments(PATH)
-                    .build());
+                    .build();
+            if (statusMessage != null) {
+                configStatusMessages.add(statusMessage);
+            }
         }
 
         return configStatusMessages;
@@ -299,30 +337,36 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
         return baseId.clone();
     }
 
-    public int getNextSenderId(Thing sender) {
-        // TODO: change id to enoceanId
+    public boolean isSmackClient(Thing sender) {
+        return smackClients.contains(sender.getConfiguration().as(EnOceanBaseConfig.class).enoceanId);
+    }
+
+    public @Nullable Integer getNextSenderId(Thing sender) {
         return getNextSenderId(sender.getConfiguration().as(EnOceanBaseConfig.class).enoceanId);
     }
 
-    public int getNextSenderId(String senderId) {
-        if (nextSenderId != 0 && sendingThings[nextSenderId] == null) {
-            int result = nextSenderId;
-            Configuration config = getConfig();
-            config.put(NEXTSENDERID, null);
-            updateConfiguration(config);
-            nextSenderId = 0;
+    public @Nullable Integer getNextSenderId(String enoceanId) {
+        EnOceanBridgeConfig config = getConfigAs(EnOceanBridgeConfig.class);
+        Integer senderId = config.nextSenderId;
+        if (senderId == null) {
+            return null;
+        }
+        if (sendingThings[senderId] == null) {
+            Configuration c = this.editConfiguration();
+            c.put(PARAMETER_NEXT_SENDERID, null);
+            updateConfiguration(c);
 
-            return result;
+            return senderId;
         }
 
-        for (byte i = 1; i < sendingThings.length; i++) {
+        for (int i = 1; i < sendingThings.length; i++) {
             if (sendingThings[i] == null || sendingThings[i].getConfiguration().as(EnOceanBaseConfig.class).enoceanId
-                    .equalsIgnoreCase(senderId)) {
+                    .equalsIgnoreCase(enoceanId)) {
                 return i;
             }
         }
 
-        return -1;
+        return null;
     }
 
     public boolean existsSender(int id, Thing sender) {
@@ -338,46 +382,131 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
         sendingThings[id] = null;
     }
 
-    public <T extends Response> void sendMessage(BasePacket message, ResponseListener<T> responseListener) {
+    public <T extends @Nullable Response> void sendMessage(BasePacket message,
+            @Nullable ResponseListener<T> responseListener) {
         try {
-            transceiver.sendBasePacket(message, responseListener);
+            EnOceanTransceiver localTransceiver = transceiver;
+            if (localTransceiver == null) {
+                throw new IOException("EnOceanTransceiver has state null");
+            }
+            localTransceiver.sendBasePacket(message, responseListener);
         } catch (IOException e) {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, e.getMessage());
         }
     }
 
     public void addPacketListener(PacketListener listener) {
-        addPacketListener(listener, listener.getSenderIdToListenTo());
+        addPacketListener(listener, listener.getEnOceanIdToListenTo());
     }
 
     public void addPacketListener(PacketListener listener, long senderIdToListenTo) {
-        if (transceiver != null) {
-            transceiver.addPacketListener(listener, senderIdToListenTo);
+        EnOceanTransceiver localTransceiver = transceiver;
+        if (localTransceiver != null) {
+            localTransceiver.addPacketListener(listener, senderIdToListenTo);
         }
     }
 
     public void removePacketListener(PacketListener listener) {
-        removePacketListener(listener, listener.getSenderIdToListenTo());
+        removePacketListener(listener, listener.getEnOceanIdToListenTo());
     }
 
     public void removePacketListener(PacketListener listener, long senderIdToListenTo) {
-        if (transceiver != null) {
-            transceiver.removePacketListener(listener, senderIdToListenTo);
+        EnOceanTransceiver localTransceiver = transceiver;
+        if (localTransceiver != null) {
+            localTransceiver.removePacketListener(listener, senderIdToListenTo);
         }
     }
 
-    public void startDiscovery(PacketListener teachInListener) {
-        transceiver.startDiscovery(teachInListener);
+    public void startDiscovery(TeachInListener teachInListener) {
+        EnOceanTransceiver localTransceiver = transceiver;
+        if (localTransceiver != null) {
+            localTransceiver.startDiscovery(teachInListener);
+        }
+
+        if (smackAvailable) {
+            // activate smack teach in
+            logger.debug("activate smack teach in");
+            try {
+                if (localTransceiver == null) {
+                    throw new IOException("EnOceanTransceiver has state null");
+                }
+                localTransceiver.sendBasePacket(ESP3PacketFactory.SA_WR_LEARNMODE(true),
+                        new ResponseListenerIgnoringTimeouts<BaseResponse>() {
+                            @Override
+                            public void responseReceived(BaseResponse response) {
+                                if (response.isOK()) {
+                                    logger.debug("Smack teach in activated");
+                                }
+                            }
+                        });
+            } catch (IOException e) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                        "Smack packet could not be send: " + e.getMessage());
+            }
+        }
     }
 
     public void stopDiscovery() {
-        transceiver.stopDiscovery();
+        EnOceanTransceiver localTransceiver = transceiver;
+        if (localTransceiver != null) {
+            localTransceiver.stopDiscovery();
+        }
+
+        try {
+            if (localTransceiver == null) {
+                throw new IOException("EnOceanTransceiver has state null");
+            }
+            localTransceiver.sendBasePacket(ESP3PacketFactory.SA_WR_LEARNMODE(false), null);
+            refreshProperties();
+        } catch (IOException e) {
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                    "Smack packet could not be send: " + e.getMessage());
+        }
+    }
+
+    private void refreshProperties() {
+        if (getThing().getStatus() == ThingStatus.ONLINE && smackAvailable) {
+            logger.debug("request learned smack clients");
+            try {
+                EnOceanTransceiver localTransceiver = transceiver;
+                if (localTransceiver != null) {
+                    localTransceiver.sendBasePacket(ESP3PacketFactory.SA_RD_LEARNEDCLIENTS,
+                            new ResponseListenerIgnoringTimeouts<RDLearnedClientsResponse>() {
+                                @Override
+                                public void responseReceived(RDLearnedClientsResponse response) {
+                                    logger.debug("received response for learned smack clients");
+                                    if (response.isValid() && response.isOK()) {
+                                        LearnedClient[] clients = response.getLearnedClients();
+                                        updateProperty("Learned smart ack clients", Integer.toString(clients.length));
+                                        updateProperty("Smart ack clients",
+                                                Arrays.stream(clients)
+                                                        .map(x -> String.format("%s (MB Idx: %d)",
+                                                                HexUtils.bytesToHex(x.clientId), x.mailboxIndex))
+                                                        .collect(Collectors.joining(", ")));
+                                        smackClients = Arrays.stream(clients).map(x -> HexUtils.bytesToHex(x.clientId))
+                                                .collect(Collectors.toSet());
+                                    }
+                                }
+                            });
+                }
+            } catch (IOException e) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                        "Smack packet could not be send: " + e.getMessage());
+            }
+        }
     }
 
     @Override
-    public void ErrorOccured(Throwable exception) {
-        transceiver.ShutDown();
-        transceiver = null;
+    public void errorOccurred(Throwable exception) {
+        EnOceanTransceiver localTransceiver = transceiver;
+        if (localTransceiver != null) {
+            localTransceiver.shutDown();
+            transceiver = null;
+        }
         updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, exception.getMessage());
+    }
+
+    public boolean sendTeachOuts() {
+        return sendTeachOuts;
     }
 }
