@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,8 +12,11 @@
  */
 package org.openhab.binding.gree.internal;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.core.thing.ThingTypeUID;
@@ -31,7 +34,7 @@ public class GreeBindingConstants {
     public static final String BINDING_ID = "gree";
 
     public static final ThingTypeUID THING_TYPE_GREEAIRCON = new ThingTypeUID(BINDING_ID, "airconditioner");
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_GREEAIRCON);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_GREEAIRCON);
 
     // List of all Thing Type UIDs
     public static final ThingTypeUID GREE_THING_TYPE = new ThingTypeUID(BINDING_ID, "airconditioner");
@@ -39,6 +42,9 @@ public class GreeBindingConstants {
     // Thing configuration items
     public static final String PROPERTY_IP = "ipAddress";
     public static final String PROPERTY_BROADCAST = "broadcastAddress";
+
+    public static final String PROPERTY_REFRESH_INTERVAL = "refreshInterval";
+    public static final String PROPERTY_ENCRYPTION_TYPE = "encryptionType";
 
     // List of all Channel ids
     public static final String POWER_CHANNEL = "power";
@@ -143,9 +149,9 @@ public class GreeBindingConstants {
     // Temperatur types and min/max ranges
     public static final int TEMP_UNIT_CELSIUS = 0;
     public static final int TEMP_UNIT_FAHRENHEIT = 1;
-    public static final int TEMP_MIN_C = 16;
+    public static final int TEMP_MIN_C = 5;
     public static final int TEMP_MAX_C = 30;
-    public static final int TEMP_MIN_F = 61;
+    public static final int TEMP_MIN_F = 41;
     public static final int TEMP_MAX_F = 86;
     public static final int TEMP_HALFSTEP_NO = 0;
     public static final int TEMP_HALFSTEP_YES = 1;
@@ -158,7 +164,6 @@ public class GreeBindingConstants {
     public static final int DATAGRAM_SOCKET_TIMEOUT = 5000; // regular read timeout
     public static final int DISCOVERY_TIMEOUT_MS = 7000; // do not change!!
     public static final int MAX_SCAN_CYCLES = 3;
-    public static final int REFRESH_INTERVAL_SEC = 5;
     public static final int MAX_API_RETRIES = 3;
 
     public static final int DIGITS_TEMP = 1;
@@ -169,8 +174,24 @@ public class GreeBindingConstants {
      * temperature value shown on the device LCD display should match the value shown by this binding when the config
      * parameter currentTemperatureOffset is set to 0.
      *
-     * @See https://github.com/tomikaa87/gree-remote#getting-the-current-temperature-reading-from-the-internal-sensor
+     * @see <a href=
+     *      "https://github.com/tomikaa87/gree-remote#getting-the-current-temperature-reading-from-the-internal-sensor">
+     *      https://github.com/tomikaa87/gree-remote#getting-the-current-temperature-reading-from-the-internal-sensor</a>
      *      for more details.
      */
     public static final double INTERNAL_TEMP_SENSOR_OFFSET = -40.0;
+
+    public enum EncryptionTypes {
+        UNKNOWN,
+        ECB,
+        COMBINED,
+        GCM;
+
+        private static final Map<String, EncryptionTypes> MAP = Stream.of(EncryptionTypes.values())
+                .collect(Collectors.toMap(Enum::name, Function.identity()));
+
+        public static EncryptionTypes of(final String name) {
+            return MAP.getOrDefault(name, UNKNOWN);
+        }
+    };
 }
