@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,6 +14,7 @@ package org.openhab.binding.homematic.internal.communicator.message;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.Charset;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Base64;
@@ -43,12 +44,15 @@ public class XmlRpcResponse implements RpcResponse {
     /**
      * Decodes a XML-RPC message from the given InputStream.
      */
-    public XmlRpcResponse(InputStream is, String encoding)
+    public XmlRpcResponse(InputStream is, Charset encoding)
             throws SAXException, ParserConfigurationException, IOException {
         SAXParserFactory factory = SAXParserFactory.newInstance();
         SAXParser saxParser = factory.newSAXParser();
+        factory.setFeature("http://xml.org/sax/features/external-general-entities", false);
+        saxParser.getXMLReader().setFeature("http://xml.org/sax/features/external-general-entities", false);
+        factory.setFeature("http://apache.org/xml/features/disallow-doctype-decl", true);
         InputSource inputSource = new InputSource(is);
-        inputSource.setEncoding(encoding);
+        inputSource.setEncoding(encoding.name());
         saxParser.parse(inputSource, new XmlRpcHandler());
     }
 
@@ -93,10 +97,10 @@ public class XmlRpcResponse implements RpcResponse {
         public void startElement(String uri, String localName, String qName, Attributes attributes)
                 throws SAXException {
             String tag = qName.toLowerCase();
-            if (tag.equals("array") || tag.equals("struct")) {
+            if ("array".equals(tag) || "struct".equals(tag)) {
                 currentDataObject.addLast(new ArrayList<>());
             }
-            isValueTag = tag.equals("value");
+            isValueTag = "value".equals(tag);
             tagValue = new StringBuilder();
         }
 
@@ -112,10 +116,10 @@ public class XmlRpcResponse implements RpcResponse {
                     break;
                 case "int":
                 case "i4":
-                    data.add(new Integer(currentValue));
+                    data.add(Integer.valueOf(currentValue));
                     break;
                 case "double":
-                    data.add(new Double(currentValue));
+                    data.add(Double.valueOf(currentValue));
                     break;
                 case "string":
                 case "name":
@@ -145,7 +149,7 @@ public class XmlRpcResponse implements RpcResponse {
                     break;
                 case "datetime.iso8601":
                     try {
-                        data.add(XmlRpcRequest.xmlRpcDateFormat.parse(currentValue));
+                        data.add(XmlRpcRequest.XML_RPC_DATEFORMAT.parse(currentValue));
                     } catch (ParseException ex) {
                         throw new SAXException(ex.getMessage(), ex);
                     }
