@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,6 +17,7 @@ import static org.openhab.binding.km200.internal.KM200BindingConstants.*;
 import java.math.BigDecimal;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Iterator;
@@ -30,7 +31,8 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
-import org.apache.commons.lang.StringUtils;
+import javax.crypto.Cipher;
+
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jetty.client.HttpClient;
@@ -71,7 +73,7 @@ public class KM200GatewayHandler extends BaseBridgeHandler {
 
     private final Logger logger = LoggerFactory.getLogger(KM200GatewayHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_KMDEVICE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_KMDEVICE);
 
     private final Map<Channel, JsonObject> sendMap = Collections.synchronizedMap(new LinkedHashMap<>());
 
@@ -90,7 +92,6 @@ public class KM200GatewayHandler extends BaseBridgeHandler {
         super(bridge);
         refreshInterval = 120;
         readDelay = 100;
-        updateStatus(ThingStatus.UNINITIALIZED, ThingStatusDetail.CONFIGURATION_PENDING);
         remoteDevice = new KM200Device(httpClient);
         dataHandler = new KM200DataHandler(remoteDevice);
         executor = Executors.newScheduledThreadPool(2, new NamedThreadFactory("org.openhab.binding.km200", true));
@@ -110,6 +111,17 @@ public class KM200GatewayHandler extends BaseBridgeHandler {
 
     @Override
     public void initialize() {
+        try {
+            int maxKeyLen = Cipher.getMaxAllowedKeyLength("AES/ECB/NoPadding");
+            if (maxKeyLen <= 128) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
+                        "Java Cryptography Extension (JCE) have to be installed");
+                return;
+            }
+        } catch (NoSuchAlgorithmException e) {
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR, "AES encoding not supported");
+            return;
+        }
         if (!getDevice().getInited()) {
             logger.info("Update KM50/100/200 gateway configuration, it takes a minute....");
             getConfiguration();
@@ -177,7 +189,7 @@ public class KM200GatewayHandler extends BaseBridgeHandler {
             switch (key) {
                 case "ip4Address":
                     String ip = (String) configuration.get("ip4Address");
-                    if (StringUtils.isNotBlank(ip)) {
+                    if (ip != null && !ip.isBlank()) {
                         try {
                             InetAddress.getByName(ip);
                         } catch (UnknownHostException e) {
@@ -190,25 +202,25 @@ public class KM200GatewayHandler extends BaseBridgeHandler {
                     break;
                 case "privateKey":
                     String privateKey = (String) configuration.get("privateKey");
-                    if (StringUtils.isNotBlank(privateKey)) {
+                    if (privateKey != null && !privateKey.isBlank()) {
                         getDevice().setCryptKeyPriv(privateKey);
                     }
                     break;
                 case "md5Salt":
                     String md5Salt = (String) configuration.get("md5Salt");
-                    if (StringUtils.isNotBlank(md5Salt)) {
+                    if (md5Salt != null && !md5Salt.isBlank()) {
                         getDevice().setMD5Salt(md5Salt);
                     }
                     break;
                 case "gatewayPassword":
                     String gatewayPassword = (String) configuration.get("gatewayPassword");
-                    if (StringUtils.isNotBlank(gatewayPassword)) {
+                    if (gatewayPassword != null && !gatewayPassword.isBlank()) {
                         getDevice().setGatewayPassword(gatewayPassword);
                     }
                     break;
                 case "privatePassword":
                     String privatePassword = (String) configuration.get("privatePassword");
-                    if (StringUtils.isNotBlank(privatePassword)) {
+                    if (privatePassword != null && !privatePassword.isBlank()) {
                         getDevice().setPrivatePassword(privatePassword);
                     }
                     break;
@@ -324,17 +336,20 @@ public class KM200GatewayHandler extends BaseBridgeHandler {
                 for (String subKey : asProperties) {
                     if (serObj.serviceTreeMap.containsKey(subKey)) {
                         KM200ServiceObject subKeyObj = serObj.serviceTreeMap.get(subKey);
-                        String subKeyType = subKeyObj.getServiceType();
-                        if (!DATA_TYPE_STRING_VALUE.equals(subKeyType) && !DATA_TYPE_FLOAT_VALUE.equals(subKeyType)) {
-                            continue;
-                        }
-                        if (bridgeProperties.containsKey(subKey)) {
-                            bridgeProperties.remove(subKey);
-                        }
-                        Object value = subKeyObj.getValue();
-                        logger.trace("Add Property: {}  :{}", subKey, value);
-                        if (null != value) {
-                            bridgeProperties.put(subKey, value.toString());
+                        if (subKeyObj != null) {
+                            String subKeyType = subKeyObj.getServiceType();
+                            if (!DATA_TYPE_STRING_VALUE.equals(subKeyType)
+                                    && !DATA_TYPE_FLOAT_VALUE.equals(subKeyType)) {
+                                continue;
+                            }
+                            if (bridgeProperties.containsKey(subKey)) {
+                                bridgeProperties.remove(subKey);
+                            }
+                            Object value = subKeyObj.getValue();
+                            logger.trace("Add Property: {}  :{}", subKey, value);
+                            if (null != value) {
+                                bridgeProperties.put(subKey, value.toString());
+                            }
                         }
                     }
                 }
