@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,30 +13,34 @@
 package org.openhab.binding.mqtt.generic;
 
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.IllegalFormatException;
-import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.mqtt.generic.values.TextValue;
 import org.openhab.binding.mqtt.generic.values.Value;
 import org.openhab.core.io.transport.mqtt.MqttBrokerConnection;
 import org.openhab.core.io.transport.mqtt.MqttMessageSubscriber;
+import org.openhab.core.library.types.DecimalType;
+import org.openhab.core.library.types.QuantityType;
+import org.openhab.core.library.types.StopMoveType;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.thing.ChannelUID;
+import org.openhab.core.thing.binding.generic.ChannelTransformation;
 import org.openhab.core.types.Command;
+import org.openhab.core.types.State;
+import org.openhab.core.types.Type;
 import org.openhab.core.types.TypeParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * This object consists of an {@link Value}, which is updated on the respective MQTT topic change.
+ * This object consists of a {@link Value}, which is updated on the respective MQTT topic change.
  * Updates to the value are propagated via the {@link ChannelStateUpdateListener}.
  *
  * @author David Graeff - Initial contribution
@@ -47,16 +51,16 @@ public class ChannelState implements MqttMessageSubscriber {
 
     // Immutable channel configuration
     protected final boolean readOnly;
-    protected final ChannelUID channelUID;
     protected final ChannelConfig config;
 
     /** Channel value **/
     protected final Value cachedValue;
 
     // Runtime variables
+    protected ChannelUID channelUID;
     private @Nullable MqttBrokerConnection connection;
-    protected final List<ChannelStateTransformation> transformationsIn = new ArrayList<>();
-    protected final List<ChannelStateTransformation> transformationsOut = new ArrayList<>();
+    protected final ChannelTransformation incomingTransformation;
+    protected final ChannelTransformation outgoingTransformation;
     private @Nullable ChannelStateUpdateListener channelStateUpdateListener;
     protected boolean hasSubscribed = false;
     private @Nullable ScheduledFuture<?> scheduledFuture;
@@ -74,43 +78,39 @@ public class ChannelState implements MqttMessageSubscriber {
      */
     public ChannelState(ChannelConfig config, ChannelUID channelUID, Value cachedValue,
             @Nullable ChannelStateUpdateListener channelStateUpdateListener) {
+        this(config, channelUID, cachedValue, channelStateUpdateListener,
+                new ChannelTransformation(config.transformationPattern),
+                new ChannelTransformation(config.transformationPatternOut));
+    }
+
+    /**
+     * Creates a new channel state.
+     *
+     * @param config The channel configuration
+     * @param channelUID The channelUID is used for the {@link ChannelStateUpdateListener} to notify about value changes
+     * @param cachedValue MQTT only notifies us once about a value, during the subscribe. The channel state therefore
+     *            needs a cache for the current value.
+     * @param channelStateUpdateListener A channel state update listener
+     * @param incomingTransformation A transformation to apply to incoming values
+     * @param outgoingTransformation A transformation to apply to outgoing values
+     */
+    public ChannelState(ChannelConfig config, ChannelUID channelUID, Value cachedValue,
+            @Nullable ChannelStateUpdateListener channelStateUpdateListener,
+            @Nullable ChannelTransformation incomingTransformation,
+            @Nullable ChannelTransformation outgoingTransformation) {
         this.config = config;
         this.channelStateUpdateListener = channelStateUpdateListener;
         this.channelUID = channelUID;
         this.cachedValue = cachedValue;
-        this.readOnly = StringUtils.isBlank(config.commandTopic);
+        this.readOnly = config.commandTopic.isBlank();
+        this.incomingTransformation = incomingTransformation == null ? new ChannelTransformation((String) null)
+                : incomingTransformation;
+        this.outgoingTransformation = outgoingTransformation == null ? new ChannelTransformation((String) null)
+                : outgoingTransformation;
     }
 
     public boolean isReadOnly() {
         return this.readOnly;
-    }
-
-    /**
-     * Add a transformation that is applied for each received MQTT topic value.
-     * The transformations are executed in order.
-     *
-     * @param transformation A transformation
-     */
-    public void addTransformation(ChannelStateTransformation transformation) {
-        transformationsIn.add(transformation);
-    }
-
-    /**
-     * Add a transformation that is applied for each value to be published.
-     * The transformations are executed in order.
-     *
-     * @param transformation A transformation
-     */
-    public void addTransformationOut(ChannelStateTransformation transformation) {
-        transformationsOut.add(transformation);
-    }
-
-    /**
-     * Clear transformations
-     */
-    public void clearTransformations() {
-        transformationsIn.clear();
-        transformationsOut.clear();
     }
 
     /**
@@ -130,6 +130,11 @@ public class ChannelState implements MqttMessageSubscriber {
      */
     public ChannelUID channelUID() {
         return channelUID;
+    }
+
+    // If the UID of the channel changed after it was initially created
+    public void setChannelUID(ChannelUID channelUID) {
+        this.channelUID = channelUID;
     }
 
     /**
@@ -155,19 +160,26 @@ public class ChannelState implements MqttMessageSubscriber {
 
         // String value: Apply transformations
         String strValue = new String(payload, StandardCharsets.UTF_8);
-        for (ChannelStateTransformation t : transformationsIn) {
-            String transformedValue = t.processValue(strValue);
-            if (transformedValue != null) {
-                strValue = transformedValue;
-            } else {
-                logger.debug("Transformation '{}' returned null on '{}', discarding message", strValue, t.serviceName);
+        if (incomingTransformation.isPresent()) {
+            Optional<String> transformedValue = incomingTransformation.apply(strValue);
+            if (transformedValue.isEmpty()) {
+                logger.debug("Transformation '{}' returned null on '{}', discarding message", strValue,
+                        incomingTransformation);
                 receivedOrTimeout();
                 return;
             }
+            strValue = transformedValue.get();
         }
 
         // Is trigger?: Special handling
         if (config.trigger) {
+            try {
+                cachedValue.parseMessage(new StringType(strValue));
+            } catch (IllegalArgumentException e) {
+                // invalid value for this trigger; ignore
+                receivedOrTimeout();
+                return;
+            }
             channelStateUpdateListener.triggerChannel(channelUID, strValue);
             receivedOrTimeout();
             return;
@@ -175,33 +187,40 @@ public class ChannelState implements MqttMessageSubscriber {
 
         Command command = TypeParser.parseCommand(cachedValue.getSupportedCommandTypes(), strValue);
         if (command == null) {
-            logger.warn("Incoming payload '{}' not supported by type '{}'", strValue,
+            logger.warn("Incoming payload '{}' on '{}' not supported by type '{}'", strValue, topic,
                     cachedValue.getClass().getSimpleName());
             receivedOrTimeout();
             return;
         }
 
-        Command postOnlyCommand = cachedValue.isPostOnly(command);
-        if (postOnlyCommand != null) {
-            channelStateUpdateListener.postChannelCommand(channelUID, postOnlyCommand);
-            receivedOrTimeout();
-            return;
-        }
-
+        Type parsedType;
         // Map the string to a command, update the cached value and post the command to the framework
         try {
-            cachedValue.update(command);
+            parsedType = cachedValue.parseMessage(command);
         } catch (IllegalArgumentException | IllegalStateException e) {
-            logger.warn("Command '{}' not supported by type '{}': {}", strValue, cachedValue.getClass().getSimpleName(),
-                    e.getMessage());
+            logger.warn("Command '{}' from channel '{}' not supported by type '{}': {}", strValue, channelUID,
+                    cachedValue.getClass().getSimpleName(), e.getMessage());
             receivedOrTimeout();
             return;
         }
 
-        if (config.postCommand) {
-            channelStateUpdateListener.postChannelCommand(channelUID, (Command) cachedValue.getChannelState());
+        if (parsedType instanceof State parsedState) {
+            cachedValue.update(parsedState);
         } else {
-            channelStateUpdateListener.updateChannelState(channelUID, cachedValue.getChannelState());
+            // things that are only Commands _must_ be posted as a command (like STOP)
+            channelStateUpdateListener.postChannelCommand(channelUID, (Command) parsedType);
+            receivedOrTimeout();
+            return;
+        }
+
+        State newState = cachedValue.getChannelState();
+        // If the user explicitly wants a command sent, not an update, do that. But
+        // we have to check that the state is even possible to send as a command
+        // (i.e. not UNDEF)
+        if (config.postCommand && newState instanceof Command newCommand) {
+            channelStateUpdateListener.postChannelCommand(channelUID, newCommand);
+        } else {
+            channelStateUpdateListener.updateChannelState(channelUID, newState);
         }
         receivedOrTimeout();
     }
@@ -242,7 +261,7 @@ public class ChannelState implements MqttMessageSubscriber {
      */
     public CompletableFuture<@Nullable Void> stop() {
         final MqttBrokerConnection connection = this.connection;
-        if (connection != null && StringUtils.isNotBlank(config.stateTopic)) {
+        if (connection != null && !config.stateTopic.isBlank()) {
             return connection.unsubscribe(config.stateTopic, this).thenRun(this::internalStop);
         } else {
             internalStop();
@@ -251,7 +270,7 @@ public class ChannelState implements MqttMessageSubscriber {
     }
 
     private void internalStop() {
-        logger.debug("Unsubscribed channel {} form topic: {}", this.channelUID, config.stateTopic);
+        logger.debug("Unsubscribed channel {} from topic: {}", this.channelUID, config.stateTopic);
         this.connection = null;
         this.channelStateUpdateListener = null;
         hasSubscribed = false;
@@ -297,7 +316,7 @@ public class ChannelState implements MqttMessageSubscriber {
 
             this.connection = connection;
 
-            if (StringUtils.isBlank(config.stateTopic)) {
+            if (config.stateTopic.isBlank()) {
                 return CompletableFuture.completedFuture(null);
             }
 
@@ -332,10 +351,6 @@ public class ChannelState implements MqttMessageSubscriber {
      *         and exceptionally otherwise.
      */
     public CompletableFuture<Boolean> publishValue(Command command) {
-        cachedValue.update(command);
-
-        Value mqttCommandValue = cachedValue;
-
         final MqttBrokerConnection connection = this.connection;
 
         if (connection == null) {
@@ -345,6 +360,9 @@ public class ChannelState implements MqttMessageSubscriber {
             return f;
         }
 
+        Command mqttCommandValue = cachedValue.parseCommand(command);
+        Value mqttFormatter = cachedValue;
+
         if (readOnly) {
             logger.debug(
                     "You have tried to publish {} to the mqtt topic '{}' that was marked read-only. You can't 'set' anything on a sensor state topic for example.",
@@ -353,18 +371,22 @@ public class ChannelState implements MqttMessageSubscriber {
         }
 
         // Outgoing transformations
-        for (ChannelStateTransformation t : transformationsOut) {
-            String commandString = mqttCommandValue.getMQTTpublishValue(null);
-            String transformedValue = t.processValue(commandString);
-            if (transformedValue != null) {
-                Value textValue = new TextValue();
-                textValue.update(new StringType(transformedValue));
-                mqttCommandValue = textValue;
-            } else {
-                logger.debug("Transformation '{}' returned null on '{}', discarding message", mqttCommandValue,
-                        t.serviceName);
+        if (outgoingTransformation.isPresent()) {
+            Command cValue = mqttCommandValue;
+            // Only pass numeric value for QuantityType.
+            if (mqttCommandValue instanceof QuantityType<?> qtCommandValue) {
+                cValue = new DecimalType(qtCommandValue.toBigDecimal());
+            }
+            String commandString = mqttFormatter.getMQTTpublishValue(cValue, "%s");
+            Optional<String> transformedValue = outgoingTransformation.apply(commandString);
+            if (transformedValue.isEmpty()) {
+                logger.debug("Transformation '{}' returned null on '{}', discarding message", outgoingTransformation,
+                        commandString);
                 return CompletableFuture.completedFuture(false);
             }
+
+            mqttFormatter = new TextValue();
+            mqttCommandValue = new StringType(transformedValue.get());
         }
 
         String commandString;
@@ -372,18 +394,30 @@ public class ChannelState implements MqttMessageSubscriber {
         // Formatter: Applied before the channel state value is published to the MQTT broker.
         if (config.formatBeforePublish.length() > 0) {
             try {
-                commandString = mqttCommandValue.getMQTTpublishValue(config.formatBeforePublish);
+                Command cValue = mqttCommandValue;
+                // Only pass numeric value for QuantityType of format pattern is %s.
+                if ((mqttCommandValue instanceof QuantityType<?> qtCommandValue)
+                        && ("%s".equals(config.formatBeforePublish) || "%S".equals(config.formatBeforePublish))) {
+                    cValue = new DecimalType(qtCommandValue.toBigDecimal());
+                }
+                commandString = mqttFormatter.getMQTTpublishValue(cValue, config.formatBeforePublish);
             } catch (IllegalFormatException e) {
                 logger.debug("Format pattern incorrect for {}", channelUID, e);
-                commandString = mqttCommandValue.getMQTTpublishValue(null);
+                commandString = mqttFormatter.getMQTTpublishValue(mqttCommandValue, null);
             }
         } else {
-            commandString = mqttCommandValue.getMQTTpublishValue(null);
+            commandString = mqttFormatter.getMQTTpublishValue(mqttCommandValue, null);
         }
 
         int qos = (config.qos != null) ? config.qos : connection.getQos();
 
-        return connection.publish(config.commandTopic, commandString.getBytes(), qos, config.retained);
+        String commandTopic;
+        if (command.equals(StopMoveType.STOP) && !config.stopCommandTopic.isEmpty()) {
+            commandTopic = config.stopCommandTopic;
+        } else {
+            commandTopic = config.commandTopic;
+        }
+        return connection.publish(commandTopic, commandString.getBytes(), qos, config.retained);
     }
 
     /**
