@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,11 +13,9 @@
 package org.openhab.binding.orvibo.internal.discovery;
 
 import java.net.SocketException;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
-import org.apache.commons.lang.StringUtils;
 import org.openhab.binding.orvibo.internal.OrviboBindingConstants;
 import org.openhab.core.config.discovery.AbstractDiscoveryService;
 import org.openhab.core.config.discovery.DiscoveryResult;
@@ -51,7 +49,7 @@ public class SocketDiscoveryService extends AbstractDiscoveryService implements 
     }
 
     private static Set<ThingTypeUID> getSupportedThingTypeUIDs() {
-        return Collections.singleton(OrviboBindingConstants.THING_TYPE_S20);
+        return Set.of(OrviboBindingConstants.THING_TYPE_S20);
     }
 
     @Override
@@ -102,7 +100,7 @@ public class SocketDiscoveryService extends AbstractDiscoveryService implements 
     private DiscoveryResult createDiscoveryResult(Socket socket) {
         ThingUID thingUID = getUID(socket);
         String label = socket.getLabel();
-        if (StringUtils.isBlank(label)) {
+        if (label == null || label.isBlank()) {
             label = "S20";
         }
         return DiscoveryResultBuilder.create(thingUID).withLabel(label)
@@ -110,8 +108,7 @@ public class SocketDiscoveryService extends AbstractDiscoveryService implements 
     }
 
     private ThingUID getUID(Socket socket) {
-        ThingUID thingUID = new ThingUID(OrviboBindingConstants.THING_TYPE_S20, socket.getDeviceId());
-        return thingUID;
+        return new ThingUID(OrviboBindingConstants.THING_TYPE_S20, socket.getDeviceId());
     }
 
     private void doThingDiscovered(Socket socket) {
