@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,14 +12,13 @@
  */
 package org.openhab.binding.teleinfo.internal.handler;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.util.Set;
+import java.util.concurrent.CopyOnWriteArraySet;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.teleinfo.internal.TeleinfoDiscoveryService;
-import org.openhab.binding.teleinfo.internal.dto.Frame;
+import org.openhab.binding.teleinfo.internal.data.Frame;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.binding.BaseBridgeHandler;
 import org.openhab.core.thing.binding.ThingHandlerService;
@@ -32,9 +31,9 @@ import org.openhab.core.thing.binding.ThingHandlerService;
 @NonNullByDefault
 public abstract class TeleinfoAbstractControllerHandler extends BaseBridgeHandler {
 
-    private List<TeleinfoControllerHandlerListener> listeners = Collections.synchronizedList(new ArrayList<>());
+    private Set<TeleinfoControllerHandlerListener> listeners = new CopyOnWriteArraySet<>();
 
-    public TeleinfoAbstractControllerHandler(Bridge bridge) {
+    protected TeleinfoAbstractControllerHandler(Bridge bridge) {
         super(bridge);
     }
 
@@ -47,11 +46,11 @@ public abstract class TeleinfoAbstractControllerHandler extends BaseBridgeHandle
     }
 
     protected void fireOnFrameReceivedEvent(final Frame frame) {
-        listeners.forEach(l -> l.onFrameReceived(this, frame));
+        listeners.forEach(l -> l.onFrameReceived(frame));
     }
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(TeleinfoDiscoveryService.class);
+        return Set.of(TeleinfoDiscoveryService.class);
     }
 }
