@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,13 +14,14 @@ package org.openhab.binding.verisure.internal.handler;
 
 import static org.openhab.binding.verisure.internal.VerisureBindingConstants.*;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.openhab.binding.verisure.internal.dto.VerisureBatteryStatusDTO;
 import org.openhab.binding.verisure.internal.dto.VerisureDoorWindowsDTO;
 import org.openhab.binding.verisure.internal.dto.VerisureDoorWindowsDTO.DoorWindow;
+import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.library.types.OpenClosedType;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.thing.Channel;
@@ -39,7 +40,7 @@ import org.openhab.core.types.UnDefType;
 @NonNullByDefault
 public class VerisureDoorWindowThingHandler extends VerisureThingHandler<VerisureDoorWindowsDTO> {
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_DOORWINDOW);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_DOORWINDOW);
 
     public VerisureDoorWindowThingHandler(Thing thing) {
         super(thing);
@@ -62,9 +63,9 @@ public class VerisureDoorWindowThingHandler extends VerisureThingHandler<Verisur
             DoorWindow doorWindow = doorWindowList.get(0);
 
             getThing().getChannels().stream().map(Channel::getUID)
-                    .filter(channelUID -> isLinked(channelUID) && !channelUID.getId().equals("timestamp"))
+                    .filter(channelUID -> isLinked(channelUID) && !"timestamp".equals(channelUID.getId()))
                     .forEach(channelUID -> {
-                        State state = getValue(channelUID.getId(), doorWindow);
+                        State state = getValue(channelUID.getId(), doorWindow, doorWindowJSON);
                         updateState(channelUID, state);
 
                     });
@@ -75,13 +76,22 @@ public class VerisureDoorWindowThingHandler extends VerisureThingHandler<Verisur
         }
     }
 
-    public State getValue(String channelId, DoorWindow doorWindow) {
+    public State getValue(String channelId, DoorWindow doorWindow, VerisureDoorWindowsDTO doorWindowJSON) {
         switch (channelId) {
             case CHANNEL_STATE:
                 return "OPEN".equals(doorWindow.getState()) ? OpenClosedType.OPEN : OpenClosedType.CLOSED;
             case CHANNEL_LOCATION:
                 String location = doorWindow.getDevice().getArea();
                 return location != null ? new StringType(location) : UnDefType.UNDEF;
+            case CHANNEL_BATTERY_STATUS:
+                VerisureBatteryStatusDTO batteryStatus = doorWindowJSON.getBatteryStatus();
+                if (batteryStatus != null) {
+                    String status = batteryStatus.getStatus();
+                    if ("CRITICAL".equals(status)) {
+                        return OnOffType.from(true);
+                    }
+                }
+                return OnOffType.from(false);
         }
         return UnDefType.UNDEF;
     }
