@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,6 +16,8 @@ import static org.openhab.binding.zoneminder.internal.ZmBindingConstants.*;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -41,12 +43,16 @@ import org.openhab.binding.zoneminder.internal.ZmStateDescriptionOptionsProvider
 import org.openhab.binding.zoneminder.internal.config.ZmBridgeConfig;
 import org.openhab.binding.zoneminder.internal.discovery.MonitorDiscoveryService;
 import org.openhab.binding.zoneminder.internal.dto.EventDTO;
+import org.openhab.binding.zoneminder.internal.dto.EventSummaryDTO;
 import org.openhab.binding.zoneminder.internal.dto.EventsDTO;
 import org.openhab.binding.zoneminder.internal.dto.MonitorDTO;
 import org.openhab.binding.zoneminder.internal.dto.MonitorItemDTO;
 import org.openhab.binding.zoneminder.internal.dto.MonitorStateDTO;
 import org.openhab.binding.zoneminder.internal.dto.MonitorStatusDTO;
 import org.openhab.binding.zoneminder.internal.dto.MonitorsDTO;
+import org.openhab.binding.zoneminder.internal.dto.RunStateDTO;
+import org.openhab.binding.zoneminder.internal.dto.RunStateDTO.RunState;
+import org.openhab.binding.zoneminder.internal.dto.RunStatesDTO;
 import org.openhab.binding.zoneminder.internal.dto.VersionDTO;
 import org.openhab.core.io.net.http.HttpUtil;
 import org.openhab.core.library.types.OnOffType;
@@ -140,12 +146,12 @@ public class ZmBridgeHandler extends BaseBridgeHandler {
         defaultImageRefreshInterval = config.defaultImageRefreshInterval;
 
         backgroundDiscoveryEnabled = config.discoveryEnabled;
-        logger.debug("Bridge: Background discovery is {}", backgroundDiscoveryEnabled == true ? "ENABLED" : "DISABLED");
+        logger.debug("Bridge: Background discovery is {}", backgroundDiscoveryEnabled ? "ENABLED" : "DISABLED");
 
         host = config.host;
         useSSL = config.useSSL.booleanValue();
         portNumber = config.portNumber != null ? Integer.toString(config.portNumber) : null;
-        urlPath = config.urlPath;
+        urlPath = "/".equals(config.urlPath) ? "" : config.urlPath;
 
         // If user and password are configured, then use Zoneminder authentication
         if (config.user != null && config.pass != null) {
@@ -185,6 +191,11 @@ public class ZmBridgeHandler extends BaseBridgeHandler {
             case CHANNEL_VIDEO_MONITOR_ID:
                 handleMonitorIdCommand(command, CHANNEL_VIDEO_MONITOR_ID, CHANNEL_VIDEO_URL, STREAM_VIDEO);
                 break;
+            case CHANNEL_RUN_STATE:
+                if (command instanceof StringType) {
+                    changeRunState(command);
+                }
+                break;
         }
     }
 
@@ -203,9 +214,15 @@ public class ZmBridgeHandler extends BaseBridgeHandler {
         }
     }
 
+    private void changeRunState(Command command) {
+        logger.debug("Bridge: Change run state to {}", command);
+        executeGet(buildUrl(String.format("/api/states/change/%s.json",
+                URLEncoder.encode(command.toString(), Charset.defaultCharset()))));
+    }
+
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(MonitorDiscoveryService.class);
+        return Set.of(MonitorDiscoveryService.class);
     }
 
     public boolean isBackgroundDiscoveryEnabled() {
@@ -277,8 +294,7 @@ public class ZmBridgeHandler extends BaseBridgeHandler {
         try {
             ContentResponse response = request.send();
             if (response.getStatus() == HttpStatus.OK_200) {
-                RawType image = new RawType(response.getContent(), response.getHeaders().get(HttpHeader.CONTENT_TYPE));
-                return image;
+                return new RawType(response.getContent(), response.getHeaders().get(HttpHeader.CONTENT_TYPE));
             } else {
                 errorMsg = String.format("HTTP GET failed: %d, %s", response.getStatus(), response.getReason());
             }
@@ -302,29 +318,27 @@ public class ZmBridgeHandler extends BaseBridgeHandler {
         }
         try {
             String response = executeGet(buildUrl("/api/monitors.json"));
-            MonitorsDTO monitors = GSON.fromJson(response, MonitorsDTO.class);
-            if (monitors != null && monitors.monitorItems != null) {
+            MonitorsDTO monitorsDTO = GSON.fromJson(response, MonitorsDTO.class);
+            if (monitorsDTO != null && monitorsDTO.monitorItems != null) {
                 List<StateOption> options = new ArrayList<>();
-                for (MonitorItemDTO monitorItem : monitors.monitorItems) {
-                    MonitorDTO m = monitorItem.monitor;
-                    MonitorStatusDTO mStatus = monitorItem.monitorStatus;
-                    if (m != null && mStatus != null) {
-                        Monitor monitor = new Monitor(m.id, m.name, m.function, m.enabled, mStatus.status);
-                        monitor.setHourEvents(m.hourEvents);
-                        monitor.setDayEvents(m.dayEvents);
-                        monitor.setWeekEvents(m.weekEvents);
-                        monitor.setMonthEvents(m.monthEvents);
-                        monitor.setTotalEvents(m.totalEvents);
-                        monitor.setImageUrl(buildStreamUrl(m.id, STREAM_IMAGE));
-                        monitor.setVideoUrl(buildStreamUrl(m.id, STREAM_VIDEO));
+                for (MonitorItemDTO monitorItemDTO : monitorsDTO.monitorItems) {
+                    MonitorDTO monitorDTO = monitorItemDTO.monitor;
+                    MonitorStatusDTO monitorStatusDTO = monitorItemDTO.monitorStatus;
+                    if (monitorDTO != null && monitorStatusDTO != null) {
+                        Monitor monitor = new Monitor(monitorDTO.id, monitorDTO.name, monitorDTO.function,
+                                monitorDTO.enabled, monitorStatusDTO.status);
+                        extractEventCounts(monitor, monitorItemDTO);
+                        monitor.setImageUrl(buildStreamUrl(monitorDTO.id, STREAM_IMAGE));
+                        monitor.setVideoUrl(buildStreamUrl(monitorDTO.id, STREAM_VIDEO));
                         monitorList.add(monitor);
-                        options.add(new StateOption(m.id, "Monitor " + m.id));
+                        options.add(new StateOption(monitorDTO.id, "Monitor " + monitorDTO.id));
                     }
-                    stateDescriptionProvider
-                            .setStateOptions(new ChannelUID(getThing().getUID(), CHANNEL_IMAGE_MONITOR_ID), options);
-                    stateDescriptionProvider
-                            .setStateOptions(new ChannelUID(getThing().getUID(), CHANNEL_VIDEO_MONITOR_ID), options);
                 }
+                // Update state options
+                stateDescriptionProvider.setStateOptions(new ChannelUID(getThing().getUID(), CHANNEL_IMAGE_MONITOR_ID),
+                        options);
+                stateDescriptionProvider.setStateOptions(new ChannelUID(getThing().getUID(), CHANNEL_VIDEO_MONITOR_ID),
+                        options);
                 // Only update alarm and event info for monitors whose handlers are initialized
                 Set<String> ids = monitorHandlers.keySet();
                 for (Monitor m : monitorList) {
@@ -333,11 +347,36 @@ public class ZmBridgeHandler extends BaseBridgeHandler {
                         m.setLastEvent(getLastEvent(m.getId()));
                     }
                 }
+                updateRunStates();
             }
         } catch (JsonSyntaxException e) {
             logger.debug("Bridge: JsonSyntaxException: {}", e.getMessage(), e);
         }
         return monitorList;
+    }
+
+    private void extractEventCounts(Monitor monitor, MonitorItemDTO monitorItemDTO) {
+        /*
+         * The Zoneminder API changed in version 1.36.x such that the event counts moved from the
+         * monitor object to a new event summary object. Therefore, if the event summary object
+         * exists in the JSON response, pull the event counts from that object, otherwise get the
+         * counts from the monitor object.
+         */
+        if (monitorItemDTO.eventSummary != null) {
+            EventSummaryDTO eventSummaryDTO = monitorItemDTO.eventSummary;
+            monitor.setHourEvents(eventSummaryDTO.hourEvents);
+            monitor.setDayEvents(eventSummaryDTO.dayEvents);
+            monitor.setWeekEvents(eventSummaryDTO.weekEvents);
+            monitor.setMonthEvents(eventSummaryDTO.monthEvents);
+            monitor.setTotalEvents(eventSummaryDTO.totalEvents);
+        } else {
+            MonitorDTO monitorDTO = monitorItemDTO.monitor;
+            monitor.setHourEvents(monitorDTO.hourEvents);
+            monitor.setDayEvents(monitorDTO.dayEvents);
+            monitor.setWeekEvents(monitorDTO.weekEvents);
+            monitor.setMonthEvents(monitorDTO.monthEvents);
+            monitor.setTotalEvents(monitorDTO.totalEvents);
+        }
     }
 
     @SuppressWarnings("null")
@@ -365,6 +404,32 @@ public class ZmBridgeHandler extends BaseBridgeHandler {
             logger.debug("Bridge: JsonSyntaxException: {}", e.getMessage(), e);
         }
         return null;
+    }
+
+    private void updateRunStates() {
+        if (!zmAuth.isAuthorized() || !isLinked(CHANNEL_RUN_STATE)) {
+            return;
+        }
+        try {
+            String response = executeGet(buildUrl("/api/states.json"));
+            RunStatesDTO runStates = GSON.fromJson(response, RunStatesDTO.class);
+            if (runStates != null) {
+                List<StateOption> options = new ArrayList<>();
+                for (RunStateDTO runState : runStates.runStatesList) {
+                    RunState state = runState.runState;
+                    logger.debug("Found runstate: id={}, name={}, desc={}, isActive={}", state.id, state.name,
+                            state.definition, state.isActive);
+                    options.add(new StateOption(state.name, state.name));
+                    if ("1".equals(state.isActive)) {
+                        updateState(CHANNEL_RUN_STATE, new StringType(state.name));
+                    }
+                }
+                stateDescriptionProvider.setStateOptions(new ChannelUID(getThing().getUID(), CHANNEL_RUN_STATE),
+                        options);
+            }
+        } catch (JsonSyntaxException e) {
+            logger.debug("Bridge: JsonSyntaxException: {}", e.getMessage(), e);
+        }
     }
 
     private @Nullable VersionDTO getVersion() {
